# Reed-Solomon

./: .gitexcludes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Reed-Solomon.pro  gf.cpp  gf.hpp  gf_test.cpp  main.cpp  polyhandler.cpp  polyhandler.h  polyhandler_test.cpp  rs.cpp  rs.hpp  rs_test.cpp  x32.cmake_toolchain
.github/workflows/: codeql-analysis.yml
examples/: CMakeLists.txt  Makefile  example1.cpp  examples.pro
include/: gf.hpp  poly.hpp  rs.hpp
src/: CMakeLists.txt  Makefile  gf.cpp  libRS.pro
tests/: CMakeLists.txt  Makefile  gftest.cpp  gftest.hpp  performancetest.cpp  performancetest.hpp  rstest.cpp  rstest.hpp  tests.cpp  tests.pro  testsuite.hpp
